what to do?